--- a/package.json
+++ b/package.json
@@ -2,10 +2,31 @@
   "name": "messenger",
   "version": "1.0.0",
   "description": "messenger app for code test",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "foundation-sites": "^6.6.3",
+    "gulp": "^4.0.2",
+    "gulp-watch": "^5.0.1",
+    "jquery": "^3.6.0",
+    "mongoose": "^5.13.2"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12",
+    "sass": "^1.35.2"
+  }
 }
